tests/__snapshots__/validation-import-wrong-list-item-type-stderr.snap.txt
Error: Item of the 'import' list must be of type string.

  2 |   "import": [
  3 |     "ts-blank-space/register",
  4 |     true
    |     ~~~~
  5 |   ],
  6 |   "testFileMatch": [
  7 |     "examples/*.test.*"

      at ./tstyche.config.json:4:5

